add CI/CD Jenkinsfiles for event and inscription services